Minor change to make sure location map doesn't fuck up too much when we get alot of meta data to show

--- a/src/js/src/assets/styles/search.less
+++ b/src/js/src/assets/styles/search.less
@@ -169,6 +169,7 @@
 }
 
 .mapContainer {
+  max-height: 285px;
   margin: 0px !important;
   padding: 0px !important;
   width: 50%;
@@ -433,6 +434,10 @@
   float: right;
   margin: 0px !important;
   padding: 0px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.3);
